# inflexible

./: .gitignore  LICENSE  Readme.md  cabal.project  inflexible.cabal
interactive/: ImportAll.hs  ImportPoly.hs  ImportPolySage.hs  Var.hs  dot-ghci  dot-ghci-sage  ex-A0.hs  ex-A0mod.hs  ex-A1-crowley-loeh.hs  ex-A1mod.hs  ex-A234-crowley-loeh.hs  ex-Ai-amann.hs  ex-no3_8-amann.hs  ghci.sh  maple_solve.mpl  maple_util.hs  polynomial-differential-forms.hs  sageenvghci.sh  spheres.hs  util_vols.hs
src/: Alg.hs  Cache.hs  FracClear.hs  HFMext.hs  Lens.hs  Types.hs  Util.hs
src-old/: deprec_FreeGradComAlg.hs  testing-A0.hs  testing-A1mod.hs  testing-A234.hs  testing-amann.hs  testing-imports.hs  testing.hs
src/Alg/: Classes.hs  Cohomology.hs  GenericMor.hs
